test/fail/macro-not-declared.rnp
1 + xyz();
---
ReferenceError: xyz is not declared
fail/macro-not-declared.rnp:1:5
1 + xyz();
    ^^^
